# didactic

./: Cargo.toml  README.md  didactic.toml
.github/workflows/: publish.yaml
content/: docs.typ  index.typ
src/: build.rs  config.rs  file_map.rs  main.rs  meta.rs  path_util.rs  test.rs
templates/: base.html  main.scss
test/: didactic.toml
test/content/: index.typ
test/templates/: base.html  index.html  main.scss
